@@ -2,27 +2,25 @@ package ru.tpsd.eatinganimationmod;
 
 import net.fabricmc.api.ClientModInitializer;
 import net.fabricmc.fabric.api.object.builder.v1.client.model.FabricModelPredicateProviderRegistry;
-import net.fabricmc.fabric.api.resource.ResourceManagerHelper;
-import net.fabricmc.fabric.api.resource.ResourcePackActivationType;
-import net.fabricmc.loader.api.FabricLoader;
 import net.minecraft.client.network.OtherClientPlayerEntity;
 import net.minecraft.item.Item;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.registry.Registry;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class EatingAnimationClientMod implements ClientModInitializer {
 
    public static float itemUseTime = 0;
-   private final List<Item> foodItems = Registry.ITEM.stream().filter(Item::isFood).toList();
+   private final List<Item> foodItems = Registry.ITEM.stream().filter(Item::isFood).collect(Collectors.toList());
 
    // asbyth thank you bru! ඞ
 
     @Override
     public void onInitializeClient() {
         for (Item item : foodItems) {
-            FabricModelPredicateProviderRegistry.register(item, new Identifier("eat"), (itemStack, clientWorld, livingEntity, i) -> {
+            FabricModelPredicateProviderRegistry.register(item, new Identifier("eat"), (itemStack, clientWorld, livingEntity) -> {
                 if (livingEntity == null) {
                     return 0.0F;
                 }
@@ -33,7 +31,7 @@ public class EatingAnimationClientMod implements ClientModInitializer {
                 return livingEntity.getActiveItem() != itemStack ? 0.0F : (itemStack.getMaxUseTime() - livingEntity.getItemUseTimeLeft()) / 30.0F;
             });
 
-            FabricModelPredicateProviderRegistry.register(item, new Identifier("eating"), (itemStack, clientWorld, livingEntity, i) -> {
+            FabricModelPredicateProviderRegistry.register(item, new Identifier("eating"), (itemStack, clientWorld, livingEntity) -> {
                 if (livingEntity == null) {
                     return 0.0F;
                 }
@@ -42,12 +40,5 @@ public class EatingAnimationClientMod implements ClientModInitializer {
             });
 
         }
-
-        FabricLoader.getInstance().getModContainer("eatinganimationid").ifPresent(eatinganimation ->
-                ResourceManagerHelper.registerBuiltinResourcePack(EatingAnimationClientMod.locate("supporteatinganimation"), eatinganimation, ResourcePackActivationType.DEFAULT_ENABLED));
-    }
-
-    public static Identifier locate(String path) {
-        return new Identifier(path);
     }
 }
